--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
       <artifactId>jspice</artifactId>
       <version>0.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>4.1</version>
+    </dependency>
 
 
   </dependencies>
